# bWatch

./: Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml
crates/bwatch/: Cargo.toml
crates/bwatch/corpus/: bwatch-v0.toml
crates/bwatch/src/: cli.rs  corpus_index.rs  error.rs  invocation.rs  lib.rs  main.rs  outward_source.rs  outward_state.rs  poll.rs  runtime.rs  substrate_input.rs  taxonomy.rs  update.rs
crates/bwatch/tests/: cli.rs  cli_json_flag.rs  corpus_load_and_resolve.rs  error.rs  invocation_transcript_contract.rs  library_surface.rs  outward_source.rs  outward_state.rs  stdout_primacy_contract.rs  substrate_input.rs  taxonomy.rs  update_subcommand.rs
crates/bwatch/tests/common/: mod.rs  test_server.rs
scripts/: public_voice_guard.sh
