[workspace]
members = ["crates/bwatch"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bvasilenko/bWatch"
readme = "README.md"

[workspace.dependencies]
thiserror = "2"
proptest = "1"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
