[package]
name = "bwatch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prompt lookup tool. Agent names a finding category from a fixed list; bwatch returns the prompt for that finding category. The prompt tells the agent how to check the external tracker for that finding."
repository.workspace = true
readme = "../../README.md"

[lib]
name = "bwatch"
path = "src/lib.rs"

[[bin]]
name = "bwatch"
path = "src/main.rs"

[[bin]]
name = "gen-fixture"
path = "src/bin/gen_fixture.rs"

[dependencies]
bsuite-core = { git = "https://github.com/bvasilenko/bCore", tag = "v0.2.0" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
toml = "0.8"
ulid = "1"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest.workspace = true
serde_json.workspace = true
tempfile = "3"
